--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       <div [routerLink]="['/admin/users']">
         Usuarios
       </div>
-      <div>
+      <div [routerLink]="['/admin/eventos']">
         Eventos
       </div>
     </div>
