--- a/src/app/home/components/mi-evento-detail/mi-evento-detail.component.html
+++ b/src/app/home/components/mi-evento-detail/mi-evento-detail.component.html
@@ -20,27 +20,42 @@
       <hr>
       <h5> Configuración </h5>
       <p> Link para los invitados: {{ urlInvitados }} </p>
-      <p> Contraseña {{ evento.password }} </p>
+      <p>
+        Contraseña
+        <span *ngIf="!cambiandoPassword ; else cambiarPassword">
+          <span> {{ evento.password }} </span>
+          <button mat-button (click)="onCambiarPassword()"> Cambiar </button>
+        </span>
+
+        <ng-template #cambiarPassword>
+          <span>
+            <input type="text" [formControl]="passwordInput">
+            <button mat-button (click)="resetCambiarPassword()"> Cancelar </button>
+            <button mat-button [disabled]="passwordInput.value == evento.password" (click)="actualizarPassword()"> Actualizar </button>
+          </span>
+        </ng-template>
+
+      </p>
       <p>
         Resultados públicos
         <strong class="habilitado" *ngIf="evento.resultadosPublicos ; else deshabilitado">
           habilitado
         </strong>
-        <button (click)="updateConfig('resultadosPublicos')"> Cambiar </button>
+        <button mat-button (click)="updateConfig('resultadosPublicos')"> Cambiar </button>
       </p>
       <p>
         Sólo una opción
         <strong class="habilitado" *ngIf="evento.soloUnaOpcion ; else deshabilitado">
           habilitado
         </strong>
-        <button (click)="updateConfig('soloUnaOpcion')"> Cambiar </button>
+        <button mat-button (click)="updateConfig('soloUnaOpcion')"> Cambiar </button>
       </p>
       <p>
         Invitados dinámicos
-        <strong class="habilitado"  *ngIf="evento.invitadosDinamicos ; else deshabilitado">
+        <strong class="habilitado" *ngIf="evento.invitadosDinamicos ; else deshabilitado">
           habilitado
         </strong>
-        <button (click)="updateConfig('invitadosDinamicos')"> Cambiar </button>
+        <button mat-button (click)="updateConfig('invitadosDinamicos')"> Cambiar </button>
       </p>
 
       <ng-template #deshabilitado> <strong class="deshabilitado"> deshabilitado </strong> </ng-template>
@@ -65,9 +80,23 @@
       <h5> Invitados </h5>
       <ul>
         <li *ngFor="let invitado of evento.invitados">
-          {{ invitado.nombre }} {{ invitado.email }}
+          {{ invitado.nombre }} <span *ngIf="invitado.email"> ({{ invitado.email }}) </span>
         </li>
       </ul>
+
+      <div>
+        Agregar un nuevo invitado
+        <mat-form-field>
+          <mat-label> Nombre </mat-label>
+          <input matInput type="text" [formControl]="nuevoInvitadoNombreInput">
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label> Email (opcional) </mat-label>
+          <input matInput type="text" [formControl]="nuevoInvitadoEmailInput">
+        </mat-form-field>
+        <button mat-button [disabled]="!nuevoInvitadoNombreInput.valid" (click)="onAgregarNuevoInvitado()"> Agregar </button>
+      </div>
     </div>
 
 
