--- a/src/app/home/pages/perfil/perfil.component.scss
+++ b/src/app/home/pages/perfil/perfil.component.scss
@@ -20,7 +20,7 @@
       justify-content: space-around;
       height: 100%;
       text-align: center;
-      border-right: 1px solid;
+      // border-right: 1px solid;
       margin-right: 5px;
 
       .sidebar-content {
