--- a/src/app/shared/components/calendar/calendar.component.scss
+++ b/src/app/shared/components/calendar/calendar.component.scss
@@ -4,6 +4,17 @@
   max-height: 65vh;
   overflow: auto;
 
+  .btn-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    button {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
+
   .button-container {
     margin-bottom: 15px;
     display: flex;
