--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -45,14 +45,13 @@
         </mat-card>
 
         <mat-card *ngFor="let evento of eventos">
-          <mat-card-subtitle> Creada el día 23 de octubre </mat-card-subtitle>
           <mat-card-title> {{ evento.nombre }} </mat-card-title>
           <mat-card-content>
             <div> {{ evento.invitados.length }} invitados </div>
-            <div> 3 días distintos </div>
             <div> {{ evento.opciones.length }} opciones </div>
             <mat-card-actions>
               <button mat-button (click)="onVerEvento(evento)"> Ver </button>
+              <button mat-button (click)="onClonar(evento)"> Clonar </button>
             </mat-card-actions>
           </mat-card-content>
         </mat-card>
