--- a/src/app/home/pages/perfil/perfil.component.scss
+++ b/src/app/home/pages/perfil/perfil.component.scss
@@ -46,6 +46,14 @@
         display: flex;
         flex-wrap: wrap;
 
+        .nuevo-evento-card {
+          cursor: pointer;
+
+          mat-card-actions {
+            text-align: center;
+          }
+        }
+
         .mat-card {
           margin: 10px;
           width: 225px;
