MP callback creamos la suscripcion

--- a/src/app/home/pages/mercadopagosuccess/mercadopagosuccess.component.html
+++ b/src/app/home/pages/mercadopagosuccess/mercadopagosuccess.component.html
@@ -5,7 +5,7 @@
   <div class="content">
     <h1> {{ title }} </h1>
     <h4>
-      Ya tenes paga la subscripción del mes actual
+      Ya tenes paga la subscripción hasta el día {{ fechaHasta | date: 'EEEE, MMMM d, y' }}
     </h4>
   </div>
 
