--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -26,9 +26,17 @@
       </div>
 
       <div class="premium">
+
         <hr>
-        <p>¿Querés eventos ilimitados?</p>
-        <button mat-button (click)="onPremium()"> PREMIUM </button>
+        <div *ngIf="!mesPagado">
+          <p>¿Querés eventos ilimitados?</p>
+          <button mat-button (click)="onPremium()"> PREMIUM </button>
+        </div>
+
+        <div *ngIf="mesPagado">
+          <p>¡Ya sos PREMIUM!</p>
+        </div>
+
       </div>
 
       <div class=".cho-container" id=".cho-container">
