Fix hardcodeo de mes

--- a/src/app/home/pages/perfil/perfil.component.html
+++ b/src/app/home/pages/perfil/perfil.component.html
@@ -13,7 +13,7 @@
       <div class="sidebar-content">
         <h2> Tu Perfil </h2>
         <p *ngIf="!mesPagado && eventosRestantes > 0">
-          Te quedan {{ eventosRestantes}} eventos para este mes de noviembre
+          Te quedan {{ eventosRestantes}} eventos para este mes
         </p>
         <p *ngIf="!mesPagado && eventosRestantes == 0">
           ¡Ya no podés agregar nuevos eventos! Conviertete en Premium para tener eventos ilimitados
